--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">
+    
 </head>
 <body>
+    
     <div class="header">
         <header>
             <h1>Blog Application</h1>
@@ -26,21 +28,25 @@
         </div>
         <% if(locals.blogs) {%>
         <% blogs.forEach( blog => { %>
-        <div class="blog">
-            <div class="blog-header">
-                <div class="title"><%= blog.title %></div>
-                <form class="put-form" action="/" method="post">
-                    <input type="hidden" name="_method" value="PUT">
+        <div class="blog" id="<%=blog.id%>">
+            <form action="/" method="post">
+                <div class="blog-header">
+                    <input class="title-input block" type="text" placeholder="title" name="title" value="<%= blog.title %>" disabled>
+                    <input class="method-input"type="hidden" name="_method" value="DELETE">
                     <input type="hidden" name="id" value="<%=blog.id%>">
-                    <input type="image" alt="Put" src="/svgs/pen.svg" width="40" height="40">
-                </form>
-                <form class="delete-form" action="/" method="post">
-                    <input type="hidden" name="_method" value="DELETE">
-                    <input type="hidden" name="id" value="<%=blog.id%>">
-                    <input class="delete" type="image" alt="Delete" src="/svgs/trash.svg" width="40" height="40">
-                </form>
-            </div>
-            <div class="blog-content"><%= blog.content %></div>
+                    <button type="input" class="put unbutton">
+                        <svg class="pen" width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11 4H7.2C6.0799 4 5.51984 4 5.09202 4.21799C4.71569 4.40974 4.40973 4.7157 4.21799 5.09202C4 5.51985 4 6.0799 4 7.2V16.8C4 17.9201 4 18.4802 4.21799 18.908C4.40973 19.2843 4.71569 19.5903 5.09202 19.782C5.51984 20 6.0799 20 7.2 20H16.8C17.9201 20 18.4802 20 18.908 19.782C19.2843 19.5903 19.5903 19.2843 19.782 18.908C20 18.4802 20 17.9201 20 16.8V12.5M15.5 5.5L18.3284 8.32843M10.7627 10.2373L17.411 3.58902C18.192 2.80797 19.4584 2.80797 20.2394 3.58902C21.0205 4.37007 21.0205 5.6364 20.2394 6.41745L13.3774 13.2794C12.6158 14.0411 12.235 14.4219 11.8012 14.7247C11.4162 14.9936 11.0009 15.2162 10.564 15.3882C10.0717 15.582 9.54378 15.6885 8.48793 15.9016L8 16L8.04745 15.6678C8.21536 14.4925 8.29932 13.9048 8.49029 13.3561C8.65975 12.8692 8.89125 12.4063 9.17906 11.9786C9.50341 11.4966 9.92319 11.0768 10.7627 10.2373Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </button>
+                    <button type="input" class="delete unbutton">
+                        <svg class="trash" width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M18 6L17.1991 18.0129C17.129 19.065 17.0939 19.5911 16.8667 19.99C16.6666 20.3412 16.3648 20.6235 16.0011 20.7998C15.588 21 15.0607 21 14.0062 21H9.99377C8.93927 21 8.41202 21 7.99889 20.7998C7.63517 20.6235 7.33339 20.3412 7.13332 19.99C6.90607 19.5911 6.871 19.065 6.80086 18.0129L6 6M4 6H20M16 6L15.7294 5.18807C15.4671 4.40125 15.3359 4.00784 15.0927 3.71698C14.8779 3.46013 14.6021 3.26132 14.2905 3.13878C13.9376 3 13.523 3 12.6936 3H11.3064C10.477 3 10.0624 3 9.70951 3.13878C9.39792 3.26132 9.12208 3.46013 8.90729 3.71698C8.66405 4.00784 8.53292 4.40125 8.27064 5.18807L8 6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </button>
+                </div>
+                <textarea class="blog-content-input block" name="content" name="content" placeholder="content" value="<%= blog.content %>" disabled><%= blog.content %></textarea>
+          </form>
         </div>
         <% })}; %>
 
